--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "renuma-react",
+  "homepage": "https://Abdullah801953.github.io/baba-battery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+    
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "gh-pages": "^6.1.1",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
